fix: move code from chat.component to eap-action.service + uniform use of translate-service AB#12862

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -218,7 +218,7 @@
             >
             </ion-note>
             <br />
-            <div *ngIf="showEapActionForecasts()" class="ion-margin-bottom">
+            <div *ngIf="disasterTypeSettings?.showMonthlyEapActions" class="ion-margin-bottom">
               <ion-note
                 size="small"
                 *ngIf="area?.filteredEapActions as actions"
