--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -222,10 +222,7 @@
               *ngIf="disasterTypeSettings?.showMonthlyEapActions"
               class="ion-margin-bottom"
             >
-              <ion-note
-                size="small"
-                *ngIf="area?.eapActions as actions"
-              >
+              <ion-note size="small" *ngIf="area?.eapActions as actions">
                 <span *ngIf="forecastInfo.length"
                   >{{
                     'chat-component.drought.active-event.forecast-info.opening'
