feat: change chatbox color to light purple AB#13238

--- a/interfaces/IBF-dashboard/src/app/components/activation-log-button/activation-log-button.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/activation-log-button/activation-log-button.component.html
@@ -3,7 +3,7 @@
   tite="Activation Log"
   attr.aria-label="Activation Log"
   size="small"
-  color="ibf-white"
+  color="ibf-primary"
   href="/activation-log"
   target="_blank"
 >
