--- a/interfaces/IBF-dashboard/src/app/components/video-guide-button/video-guide-button.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/video-guide-button/video-guide-button.component.html
@@ -1,7 +1,7 @@
 <ion-button
   data-test="video-guide-button"
   (click)="presentPopover()"
-  [color]="color"
+  color="ibf-primary"
   size="small"
 >
   Video Guide
