--- a/interfaces/IBF-dashboard/src/app/components/export-view/export-view.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/export-view/export-view.component.html
@@ -4,7 +4,7 @@
   [attr.aria-label]="'Export View'"
   size="small"
   fill="solid"
-  color="ibf-white"
+  color="ibf-primary"
   (click)="presentPopover()"
   data-test="export-view-button"
 >
