--- a/interfaces/IBF-dashboard/src/theme/variables.scss
+++ b/interfaces/IBF-dashboard/src/theme/variables.scss
@@ -46,8 +46,8 @@
 
   --ion-color-ibf-trigger-alert-tertiary: #ebe1f8;
   --ion-color-ibf-trigger-alert-tertiary-rgb: 98, 0, 238;
-  --ion-color-ibf-trigger-alert-tertiary-contrast: #000000;
-  --ion-color-ibf-trigger-alert-tertiary-contrast-rgb: 0, 0, 0;
+  --ion-color-ibf-trigger-alert-tertiary-contrast: #6200ee;
+  --ion-color-ibf-trigger-alert-tertiary-contrast-rgb: 98, 0, 238;
   --ion-color-ibf-trigger-alert-tertiary-shade: #d4cbdf;
   --ion-color-ibf-trigger-alert-tertiary-tint: #ede4f9;
 
@@ -183,16 +183,16 @@
       --ion-color-ibf-trigger-alert-tertiary-tint
     );
 
-    --ion-color-ibf-chat-not-self: var(--ion-color-ibf-primary);
-    --ion-color-ibf-chat-not-self-rgb: var(--ion-color-ibf-primary-rgb);
+    --ion-color-ibf-chat-not-self: var(--ion-color-ibf-tertiary);
+    --ion-color-ibf-chat-not-self-rgb: var(--ion-color-ibf-tertiary-rgb);
     --ion-color-ibf-chat-not-self-contrast: var(
-      --ion-color-ibf-primary-contrast
+      --ion-color-ibf-tertiary-contrast
     );
     --ion-color-ibf-chat-not-self-contrast-rgb: var(
-      --ion-color-ibf-primary-contrast-rgb
+      --ion-color-ibf-tertiary-contrast-rgb
     );
-    --ion-color-ibf-chat-not-self-shade: var(--ion-color-ibf-primary-shade);
-    --ion-color-ibf-chat-not-self-tint: var(--ion-color-ibf-primary-tint);
+    --ion-color-ibf-chat-not-self-shade: var(--ion-color-ibf-tertiary-shade);
+    --ion-color-ibf-chat-not-self-tint: var(--ion-color-ibf-tertiary-tint);
 
     --ion-color-ibf-chat-self: var(--ion-color-ibf-tertiary);
     --ion-color-ibf-chat-self-rgb: var(--ion-color-ibf-tertiary-rgb);
