feat: red text instead of red background for delayed model run AB#13245

--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
@@ -69,19 +69,14 @@
 }
 
 .dialogue-turn.is-other.is-warn {
-  .dialogue-turn--speech-arrow {
-    left: var(--dialogue-turn--margin-around-card-horizontal);
-    border-right-color: var(--ion-color-danger);
-  }
+  .dialogue-turn--content {
+    ion-card-content {
+      color: var(--ion-color-danger);
 
-  // Adjust for RTL: (Limited support: https://developer.mozilla.org/en-US/docs/Web/CSS/:dir#Browser_compatibility)
-  .dialogue-turn--speech-arrow:dir(rtl) {
-    // Reset LTR-styles first:
-    left: auto;
-    border-right-color: transparent;
-
-    right: var(--dialogue-turn--margin-around-card-horizontal);
-    border-left-color: var(--ion-color-danger);
+      app-timestamp {
+        color: var(--ion-color-ibf-primary);
+      }
+    }
   }
 }
 
