--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
@@ -29,7 +29,7 @@
   <div class="dialogue-turn--content">
     <ion-card
       [color]="
-        isSelf ? 'ibf-chat-self' : isWarn ? 'danger' : 'ibf-chat-not-self'
+        isSelf ? 'ibf-chat-self' : 'ibf-chat-not-self'
       "
     >
       <ion-card-content>
