--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
@@ -27,11 +27,7 @@
     </ng-container>
   </div>
   <div class="dialogue-turn--content">
-    <ion-card
-      [color]="
-        isSelf ? 'ibf-chat-self' : 'ibf-chat-not-self'
-      "
-    >
+    <ion-card [color]="isSelf ? 'ibf-chat-self' : 'ibf-chat-not-self'">
       <ion-card-content>
         <ng-content></ng-content>
         <small><app-timestamp [timestamp]="timestamp"></app-timestamp></small>
