feat: red outline for speech bubbles related to triggered areas AB#13246

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -106,6 +106,7 @@
           filteredActiveAreas.length === 0
         "
         isConnected="true"
+        [isTriggered]="true"
       >
         <p
           [translate]="
@@ -185,6 +186,7 @@
       actor="self"
       *ngFor="let area of filteredActiveAreas; first as isFirst"
       [isConnected]="!isFirst"
+      [isTriggered]="true"
     >
       <form (submit)="submitEapAction(area.placeCode)">
         <ion-row>
