--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
@@ -8,7 +8,8 @@
     'is-pending': animate && !isSpoken,
     'is-spoken': animate && isSpoken,
     'is-warn': isWarn,
-    'is-stopped': isStopped
+    'is-stopped': isStopped,
+    'is-triggered': isTriggered
   }"
 >
   <div class="dialogue-turn--actor">
