--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
@@ -156,6 +156,14 @@
   }
 }
 
+.dialogue-turn.is-triggered {
+  .dialogue-turn--content {
+    ion-card {
+      border: var(--ion-color-ibf-outline-red) solid;
+    }
+  }
+}
+
 .dialogue-turn.is-spoken {
   .dialogue-turn--content {
     animation-name: speak;
