feat: add PDF link in video popup AB#13474

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -15,7 +15,7 @@
         'chat-component.' + disasterTypeName + '.about-button-label' | translate
       "
     ></app-about-btn>
-    <app-video-guide-button></app-video-guide-button>
+    <app-ibf-guide-button></app-ibf-guide-button>
     <app-activation-log-button></app-activation-log-button>
     <app-export-view></app-export-view>
   </app-dialogue-turn>
