--- a/interfaces/IBF-dashboard/src/app/components/ibf-guide-button/ibf-guide-button.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/ibf-guide-button/ibf-guide-button.component.html
@@ -1,8 +1,8 @@
 <ion-button
-  data-test="video-guide-button"
+  data-test="ibf-guide-button"
   (click)="presentPopover()"
   color="ibf-primary"
   size="small"
 >
-  Video Guide
+  {{ 'ibf-guide-component.title' | translate }}
 </ion-button>
