fix: new design ibf guide popover AB#13476

--- a/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
@@ -50,11 +50,14 @@
             </ion-card-subtitle>
           </ion-card-header>
           <ion-card-content>
-            <ion-card-title
+            <ion-button
               (click)="presentPopover()"
-              [translate]="'login-page.video'"
+              color="ibf-white"
+              size="small"
+              expand="block"
             >
-            </ion-card-title>
+              {{ 'ibf-guide-component.title' | translate }}
+            </ion-button>
             <br />
             <span [translate]="'login-page.note'"></span>
           </ion-card-content>
