--- a/interfaces/IBF-dashboard/src/app/components/ibf-guide-popover/ibf-guide-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/ibf-guide-popover/ibf-guide-popover.component.html
@@ -1,5 +1,5 @@
-<ion-card data-test="video-popover" class="popover-window-card">
-  <ion-card-header color="ibf-primary">
+<ion-card data-test="ibf-guide-popover" class="popover-window-card">
+  <ion-card-header color="ibf-no-alert-primary">
     <ion-icon
       name="close-circle"
       size="large"
@@ -12,10 +12,16 @@
   </ion-card-header>
   <ion-card-content class="ion-padding-top">
     <div>
-      <strong>{{ 'ibf-guide-component.pdf' | translate }}: </strong
-      ><a href="{{ pdfUrl }}" target="_blank">
-        {{ 'ibf-guide-component.click' | translate }}
-      </a>
+      <strong>{{ 'ibf-guide-component.pdf-and-video' | translate }}: </strong>
+    </div>
+    <br />
+    <div>
+      {{ 'ibf-guide-component.description' | translate }}
+    </div>
+    <div class="ion-text-center">
+      <ion-button color="ibf-no-alert-primary" (click)="openPdfManual()">
+        {{ 'ibf-guide-component.pdf' | translate }}
+      </ion-button>
     </div>
     <br />
     <div>
