feat: beginning timeline tests AB#13480

--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
@@ -15,7 +15,7 @@
         : 'ibf-no-alert-tertiary'
     }}"
     fill="solid"
-    data-test="time-line-button"
+    data-test="timeline-button"
     [class.active]="timeStepButton.active"
     [class.alert]="timeStepButton.alert && !timeStepButton?.disabled"
     (click)="handleTimeStepButtonClick(timeStepButton.value)"
