feat: add new timeline tests AB#13480

--- a/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.html
@@ -19,7 +19,8 @@
         "
         slot="start"
         class="containerTwo"
-        [attr.data-test]="'trigger-active-' + disasterType.activeTrigger"
+        data-test="selected-disaster"
+        [class.triggered]="disasterType.activeTrigger"
       >
       </ion-icon>
     </div>
