INCOMPLETE STATE: beginning of loop over disaster-types AB#13500

--- a/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.html
@@ -2,7 +2,7 @@
   <div
     *ngFor="let disasterType of disasterTypes"
     (click)="switchDisasterType(disasterType)"
-    data-test="disaster-Type"
+    data-test="disaster-type-button"
     [ngClass]="{ active: disasterType.disasterType === selectedDisasterType }"
     class="containerOne"
   >
