--- a/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
@@ -7,11 +7,18 @@
         data-test="heading-display-name-label"
       >
         <span>
-          IBF PORTAL <strong>{{ countryName }} </strong>
+          IBF PORTAL
+
+          <strong
+            *ngIf="!isLoggedIn && environmentConfiguration === 'development'"
+          >
+            {{ countryName }}</strong
+          >
           <strong
             *ngIf="isLoggedIn"
             [ngClass]="{ active: disasterType?.activeTrigger }"
           >
+            {{ countryName }}
             {{ disasterType?.disasterType }} {{ activeTriggerMsg }}
           </strong>
           <ion-icon
