feat: add generic pdf link env AB#13510

--- a/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
@@ -8,9 +8,7 @@
       >
         <span>
           IBF PORTAL
-          <strong
-            *ngIf="!isLoggedIn"
-          >
+          <strong *ngIf="!isLoggedIn">
             {{ showEnvironmentLabel(environmentConfiguration) }}</strong
           >
           <strong
