feat: make activation-log country & disaster specific AB#13509

--- a/interfaces/IBF-dashboard/src/app/components/activation-log-button/activation-log-button.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/activation-log-button/activation-log-button.component.html
@@ -4,8 +4,7 @@
   attr.aria-label="Activation Log"
   size="small"
   color="ibf-primary"
-  href="/activation-log"
-  target="_blank"
+  (click)="goToPage()"
 >
   <span class="ion-hide-sm-down">Activation Log</span>
 </ion-button>
