feat: draw focus to selected area via outline AB#13606

--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
@@ -150,8 +150,8 @@
   .dialogue-turn--content {
     ion-card {
       background-color: var(--ion-color-ibf-no-alert-tertiary) !important;
-      color: var(--ion-color-ibf-no-alert-tertiary-contrast) !important;
-      border: var(--ion-color-ibf-no-alert-tertiary-contrast) solid 2px;
+      color: var(--ion-color-ibf-black) !important;
+      border: var(--ion-color-ibf-black) solid 2px;
     }
   }
 }
