--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -283,9 +283,7 @@
             ></ion-checkbox>
             <ion-label class="action-label ion-text-wrap"
               ><strong>{{ action.aofLabel }}: </strong>{{ action.label
-              }}<span *ngIf="action.month"
-                ><strong> ({{ action.monthLong }})</strong></span
-              >
+              }}<span *ngIf="action.month"><strong> ({{ action.monthLong[getRegion(area.placeCode)] }})</strong></span>
             </ion-label>
           </ion-item>
         </ion-list>
