feat: set today-btn to recent date AB#13979

--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
@@ -24,6 +24,7 @@
       [date]="timeStepButton.date"
       [unit]="timeStepButton.unit"
       [active]="!timeStepButton.disabled"
+      [todayButton]="false"
     ></app-date-button>
   </ion-button>
 </ion-item>
