--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -124,7 +124,7 @@
                   [disabled]="true"
                   color="ibf-primary"
                 >
-                  <app-date-button></app-date-button>
+                  <app-date-button [todayButton]="true"></app-date-button>
                 </ion-button>
               </ion-item>
             </ion-col>
