feat: adapt chat section to below-threshold event AB#13998

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -47,7 +47,7 @@
   >
     <ng-container *ngFor="let event of eventState?.events">
       <p
-        *ngIf="event.activeTrigger"
+        *ngIf="event.activeTrigger && event.thresholdReached"
         [innerHTML]="
           'chat-component.' +
             disasterTypeName +
@@ -59,6 +59,20 @@
                   leadTime: event.firstLeadTimeLabel,
                   timeUnit: event.timeUnit,
                   disasterTypeLabel: disasterTypeLabel,
+                  firstLeadTimeDate: event.firstLeadTimeDate,
+                  eventName: event.eventName
+                }
+        "
+      ></p>
+      <p
+        *ngIf="event.activeTrigger && !event.thresholdReached"
+        [innerHTML]="
+          'chat-component.' +
+            disasterTypeName +
+            '.active-event-below-trigger.welcome'
+            | translate
+              : {
+                  startDate: event.startDate,
                   firstLeadTimeDate: event.firstLeadTimeDate,
                   eventName: event.eventName
                 }
@@ -109,7 +123,7 @@
     ></p>
   </app-dialogue-turn>
 
-  <ng-container *ngIf="eventState?.activeEvent">
+  <ng-container *ngIf="eventState?.activeEvent && eventState?.thresholdReached" >
     <ng-container *ngIf="eventState?.activeTrigger">
       <app-dialogue-turn
         *ngIf="
