feat: process below vs above threshold event everywhere AB#13996

--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -189,8 +189,8 @@
 }
 
 .typhoon-track-icon-future {
-  background: var(--ion-color-ibf-trigger-alert-primary);
-  border: 1px solid var(--ion-color-ibf-no-alert-primary);
+  background: var(--ion-color-ibf-primary);
+  border: 1px solid var(--ion-color-ibf-primary-contrast);
   border-radius: 50%;
 }
 
