--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -279,12 +279,12 @@
                 "
               ></span>
               <strong
-                ><span *ngIf="actionIndicatorNumberFormat === 'decimal0'"
-                  > {{ area.actionsValue | number: '.0-0' }}
+                ><span *ngIf="actionIndicatorNumberFormat === 'decimal0'">
+                  {{ area.actionsValue | number: '.0-0' }}
                 </span>
-                <span *ngIf="actionIndicatorNumberFormat === 'perc'"> {{
-                  area.actionsValue | percent: '.0-0'
-                }}</span>
+                <span *ngIf="actionIndicatorNumberFormat === 'perc'">
+                  {{ area.actionsValue | percent: '.0-0' }}</span
+                >
               </strong>
             </ion-note>
             <br />
