--- a/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
@@ -19,6 +19,7 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
+  <app-disclaimer-toolbar></app-disclaimer-toolbar>
 </ion-header>
 
 <ion-content>
