--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/activation-log/activation.log.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/activation-log/activation.log.page.html
@@ -2,14 +2,9 @@
   <ion-header class="ion-no-border">
     <ion-toolbar>
       <ion-buttons slot="start">
-        <ion-button title="Home" [class.ion-hide]="isDev">
+        <ion-button title="Home">
           <ion-icon name="apps" slot="icon-only"></ion-icon>
         </ion-button>
-        <ion-menu-toggle menu="dev-control" [class.ion-hide]="!isDev">
-          <ion-button>
-            <ion-icon name="apps" slot="icon-only"></ion-icon>
-          </ion-button>
-        </ion-menu-toggle>
       </ion-buttons>
       <app-user-state [isLoggedIn]="true"></app-user-state>
       <ion-row slot="end" class="ion-align-items-center">
