feat: change staging banner UX copy AB#14269

--- a/interfaces/IBF-dashboard/src/app/components/disclaimer-toolbar/disclaimer-toolbar.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/disclaimer-toolbar/disclaimer-toolbar.component.html
@@ -4,6 +4,6 @@
   color="ibf-primary"
 >
   <ion-title class="ion-text-center" size="small"
-    >IBF DEMO - MOCK DATA</ion-title
+    >IBF DEMO - SIMULATED DATA</ion-title
   >
 </ion-toolbar>
